  08 Nov 2012; Manuel Rueger <gentoo@rueg.eu
  -files/biber-1.2-drop-Mozilla-CA.patch, biber-1.3.ebuild:
  dev-tex/biber: Fix missing dependencies

*biber-1.3 (02 Nov 2012)

  02 Nov 2012;  <mrueg@gentoo.org> +biber-1.3.ebuild,
  +files/biber-1.2-drop-Mozilla-CA.patch, +metadata.xml:
  dev-tex/biber: Import via bug #340353