@@ -1,4 +1,4 @@
-DIST biber-1.3.tar.gz 1954517 SHA256 74795f92bfcaed25d3611196978a18e4a51a61ef62223616c387069f0cfe600b SHA512 b64bba29b61644bd307c8c4b5d3dd70247f9e589ea1df84156ed43cd798bb456ac4658121fc5a90fadd4a8a2a1ca2ae4412033092e0e2d2718bbbeb74570780f WHIRLPOOL 8ae8038df9d2bdb0950d3184883be6fa622d04693e5fe0bff597ebe8f1a53c6869ce46146a73e4ce3b26ebdd430db3ecd2199a79dd6306a8794656079bb96d33
-EBUILD biber-1.3.ebuild 1116 SHA256 4a102c13e24c9c9c51fd0ce4197e1eaa716a9849044f60929b3b0b2d5c90b08a SHA512 dbaadc9931b0e1e5780f14c448e02dcfe1e2a530a5f4f699ce41f6de7d86f9c7e743ec5d128b74682e028b1468102eeb4ca98aec2935d7dcac98a72b477bef26 WHIRLPOOL c83632491150fdf36f550eb7dad644e60deb7dc0f246d19af7fb35ce534b09f53ba6ad3c8d9e9d9647d8ffe606c6013c86d364006dea187d148a211335a9ca09
-MISC ChangeLog 325 SHA256 4739ab61911bbb035b1844ee10b544a3d66bf2380739fc1d53e4b75ff0a2c3b7 SHA512 e4d98692dfccaf86f35710cd442380981d6d67fed889ed5190878e80b7b1becb8c306477bf787adef2db6652f0601404c5ab3991a0bc152b309b327c7047e746 WHIRLPOOL f4f55ce2a908699583252d9e50e2a4531fbf5485fabdd006b9b9f1e610edcb295efd2c6fd1136b6d990ed3c754924c49700680a25c1f6ce7099e37b029385a1c
+DIST biber-1.4.tar.gz 1961722 SHA256 9d3add3daf016029384535bab258916857b0312788ee92964bd4d02ac91a2c1a SHA512 612d5ed40c4d41200447c18bd6de27e1a1877350873b673464477b02e92bcde51deed5a7a1337aff8f8e89196b6aafaff3f670e91e99cf1d62cb65ddf8b76dfc WHIRLPOOL 95a8648d2d10632cfa08b3151fc8ef19bfb4af5516270e54b49483d383134a51b5777f8cc5eaabbb0585f3533188cb0b87c2c517748f3c1c933c07ce7aadb258
+EBUILD biber-1.4.ebuild 1095 SHA256 04c860c2a70854719b553f3c36f6eb87ddd03fb6fadbb573a1851799ae8d946d SHA512 a0caed666168a25196b15715f7421af327f02ed9132b74318b21fe888468e32fbceca2a9b139914dff8d036fc98b2429d068f710527061e48bf33fa563242eec WHIRLPOOL 656cb22d858a2e0d5bba1a92a193fb7d5f433f1330f398120e6bd50feb2b49d9ee63e397947b860a648d6311bc1a1dbf7dc8e3545668e96022bd4da52b2b592c
+MISC ChangeLog 455 SHA256 c7589940435397c50d50659b1c315b9c835125e84191b7141ead7bd429914656 SHA512 02052533d8f59d85782c4dcbffcc3b7242912dcdba33890d642d8868f9a7a3383bfbfe38588c0837e2efc77d9cdab4fc2a5239cf5686128184dd1e7d4c12fca8 WHIRLPOOL bb4ade972e607a68e370e25590ebbf1e56d8d9860fd626ee2334ccec37afe624ba704eec9094d3bdca57775628dd40a0f247cb0760f9f9c6d737f98b30c5f943
 MISC metadata.xml 237 SHA256 7aebf1a287d9d2d4fa5b66af4c801da2083b6bc7d3cd077c235869ade1fb960d SHA512 e9249ef4ab11f8463a54b559634717a35dcd23da7e4d233feb223f3db7847e0638a5a3c89fb23a05c567251dde2e796c2ce3cd1efd57ff1a513c6fe55f9978a8 WHIRLPOOL 01e3ce0b931af3ce0389559235d360f5278067cb93376de4bf06a4e640fe54619595ebde1b8c811b64cb2a3aeab2b61ed54052f6e33de9470342c4cd27ddd443
