@@ -1,3 +1,8 @@
+*biber-1.4 (29 Nov 2012)
+
+  29 Nov 2012;  <mrueg@gentoo.org> +biber-1.4.ebuild, -biber-1.3.ebuild:
+  dev-tex/biber: Version bump
+
   08 Nov 2012; Manuel Rueger <gentoo@rueg.eu
   -files/biber-1.2-drop-Mozilla-CA.patch, biber-1.3.ebuild:
   dev-tex/biber: Fix missing dependencies
